manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82222190_pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82222190_pt
  template:
    metadata:
      labels:
        app: 82222190_pt 
    spec:
      containers:
        - name: 82222190_pt 
          image: cepgstapacr.azurecr.io/82222190_pt
          ports:
          - containerPort: 8080
